--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Xons001/LoginHibrido.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Xons001/LoginHibrido/issues"
+  },
+  "homepage": "https://github.com/Xons001/LoginHibrido#readme"
 }
